[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUN.png" type="Texture" id=1]
[ext_resource path="res://Gun.gd" type="Script" id=2]
[ext_resource path="res://Beam.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 3 )

[sub_resource type="Animation" id=2]
resource_name = "fire_beam"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GunPivot/BeamSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "charging_fire"
length = 2.01
tracks/0/type = "value"
tracks/0/path = NodePath("GunPivot/Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GunPivot/Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("GunPivot/Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )

[node name="GunPivot" type="Position2D" parent="."]

[node name="BeamCast" type="RayCast2D" parent="GunPivot"]
enabled = true
cast_to = Vector2( 1248, 0 )
collide_with_areas = true

[node name="Gun" type="Sprite" parent="GunPivot"]
position = Vector2( 3, 0 )
texture = ExtResource( 1 )
vframes = 8
frame = 6

[node name="BeamSprite" type="Sprite" parent="GunPivot"]
visible = false
show_behind_parent = true
position = Vector2( 8, -3 )
texture = ExtResource( 3 )
centered = false
vframes = 5
frame = 4
region_enabled = true
region_rect = Rect2( 0, 0, 1240, 30 )

[node name="BeamStart" type="Position2D" parent="GunPivot"]
position = Vector2( 8, 0 )

[node name="DamageArea" type="Area2D" parent="GunPivot"]
collision_layer = 0
collision_mask = 512
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunPivot/DamageArea"]
position = Vector2( 19, 0 )
shape = SubResource( 3 )

[node name="BulletSet" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire_beam = SubResource( 2 )

[node name="AnimationPlayerGun" type="AnimationPlayer" parent="."]
anims/charging_fire = SubResource( 4 )
anims/fire = SubResource( 5 )
anims/idle = SubResource( 6 )

[connection signal="body_entered" from="GunPivot/DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
